<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InterestsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/interestsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tabLabels"
            android:text="@string/tabInterests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/labelView"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_manga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/interestsTab"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_manga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_manga"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kingdom"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            style="@style/contentLabel"/>

        <TextView
            android:id="@+id/labelView2"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_anime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_anime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView2"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_anime"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kingdom"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            style="@style/contentLabel"/>

        <TextView
            android:id="@+id/labelView3"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_manhwa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_manhwa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView3"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_manhwa"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overgeared"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            style="@style/contentLabel"/>

        <TextView
            android:id="@+id/labelView4"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_manhua"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_manhua"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView4"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_manhua"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soulland"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            style="@style/contentLabel"/>

        <TextView
            android:id="@+id/labelView5"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView4"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView5"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_game"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arcraiders"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            style="@style/contentLabel"/>

        <TextView
            android:id="@+id/labelView6"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_drama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView5"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_drama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView6"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_drama"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cdrama"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            style="@style/contentLabel"/>

        <TextView
            android:id="@+id/labelView7"
            style="@style/textLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntrst_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView6"
            android:layout_margin="@dimen/small_space"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/small_icon2"
            android:layout_height="@dimen/small_icon2"
            android:src="@drawable/ntrst_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelView7"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/ntrst_movie"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            style="@style/contentLabel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>