<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsFragment">


    <TextView
        android:id="@+id/tabFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabFriends"
        style="@style/tabLabels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/friendIcon"
        android:layout_width="@dimen/small_icon"
        android:layout_height="@dimen/small_icon"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabFriends"
        android:layout_margin="@dimen/big_space"
        android:contentDescription="@string/user_name"/>

    <TextView
        android:id="@+id/friendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="@+id/friendIcon"
        app:layout_constraintEnd_toStartOf="@+id/friendStatus"
        app:layout_constraintStart_toEndOf="@+id/friendIcon"
        app:layout_constraintTop_toTopOf="@+id/friendIcon" />

    <TextView
        android:id="@+id/friendStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/friendName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendName"
        android:layout_marginEnd="@dimen/big_space"/>

    <ImageView
        android:id="@+id/friendIcon2"
        android:layout_width="@dimen/small_icon"
        android:layout_height="@dimen/small_icon"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendIcon"
        android:layout_margin="@dimen/big_space"
        android:contentDescription="@string/user_name"/>

    <TextView
        android:id="@+id/friendName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="@+id/friendIcon2"
        app:layout_constraintEnd_toStartOf="@+id/friendStatus2"
        app:layout_constraintStart_toEndOf="@+id/friendIcon2"
        app:layout_constraintTop_toTopOf="@+id/friendIcon2" />

    <TextView
        android:id="@+id/friendStatus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/friendName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friendName2"
        android:layout_marginEnd="@dimen/big_space"/>
</androidx.constraintlayout.widget.ConstraintLayout>